# globalplatform

globalplatform/: CMakeLists.txt
globalplatform/src/: CMakeLists.txt  rnConn.cpp
globalplatform/src/includes/globalplatform/: connection.h
